--- a/caso-estudio-factura.html
+++ b/caso-estudio-factura.html
@@ -417,19 +417,19 @@
                 <h3>Resumen</h3>
                 <div class="total-row subtotal">
                     <span>Subtotal:</span>
-                    <span id="id-txt-subtotal">$8,200.00</span>
+                    <span id="id-txt-subtotal">$0.00</span>
                 </div>
                 <div class="total-row tax">
                     <span>IVA (15%):</span>
-                    <span id="id-txt-iva">$1,230.00</span>
+                    <span id="id-txt-iva">$0.00</span>
                 </div>
                 <div class="total-row">
                     <span>Descuento:</span>
-                    <span id="id-txt-descuento">-$150.00</span>
+                    <span id="id-txt-descuento">$0.00</span>
                 </div>
                 <div class="total-row grand-total">
                     <span>TOTAL:</span>
-                    <span id="id-txt-total">$9,280.00</span>
+                    <span id="id-txt-total-pagar">$0.00</span>
                 </div>
             </div>
         </div>
@@ -437,8 +437,8 @@
     </div>
 
     <script>
-         //               [0]         [1]        [2] ... N
-        // productos [ [producto1], [producto2], ...N ]
+        // Vector listado de productos.
+        // productos [ [producto1], [producto2], [producto3], ..N ]
         const productos = [
            //cod  , precio , descripcion
            //[0]    [1]   [2]
@@ -448,17 +448,22 @@
            ["0004", 300, "Telefono Celular Samsung"],
            ["0005", 200, "Camara profesional Web."]
         ]
-
         // Vector para guardar los detalles de la factura
         const facturaDetalles =[]
 
-        // Referencias a los controles del formulario
+        // Referencias a los controles del formulario (Select, Input, Button, Table etc.)
         const selectProducto = document.getElementById('id-select-producto')
         const txtCantidad = document.getElementById('id-txt-cantidad')
         const txtPrecio = document.getElementById('id-txt-precio')
         const txtTotal = document.getElementById('id-txt-total')
         const btnAgregar = document.getElementById('id-btn-agregar')
         const tablaDetalle = document.querySelector('#id-table-detalle tbody')
+
+        // Referencias a las cajas de texto de totales
+        const txtSubtotal = document.getElementById('id-txt-subtotal')
+        const txtIva = document.getElementById('id-txt-iva')
+        const txtDescuento = document.getElementById('id-txt-descuento')
+        const txtTotalPagar = document.getElementById('id-txt-total-pagar')
 
         fnCargarProductos()
 
@@ -482,38 +487,122 @@
         })
 
         btnAgregar.addEventListener('click', (event)=>{
+            // Extraer datos del producto seleccionado desde la lista desplegable
             const codigo = selectProducto.options[selectProducto.selectedIndex].dataset.codigo
             const descripcion = selectProducto.options[selectProducto.selectedIndex].textContent
+
+            // Validar que se haya seleccionado un producto
+            if(!codigo){
+                alert('Debe seleccionar un producto o servicio.')
+                return false
+            }
+
+            // Extraer datos desde las cajas de texto
             const cantidad = parseFloat(txtCantidad.value)
             const precio = parseFloat(txtPrecio.value)
             const total = parseFloat(txtTotal.value)
 
-            facturaDetalles.push([codigo, descripcion, precio, cantidad, total])
-            fnPresentarDetalleFacturas()
+            // Validar si el producto ya existe en el detalle
+            const [existe, indice] = fnExisteProductoEnDetalle(codigo)
+            // Si existe, actualizar la cantidad y el total
+            if(existe){
+                // Actualizar la cantidad y el total del producto existente
+                facturaDetalles[indice][3] += cantidad // actualizar cantidad
+                facturaDetalles[indice][4] = facturaDetalles[indice][3] * facturaDetalles[indice][4] // actualizar total
+            }
+            else
+            {
+                // Caso contrario, agregar un nuevo producto al detalle
+                facturaDetalles.push([codigo, descripcion, precio, cantidad, total])
+            }
 
+            // Presentar el detalle en la tabla HTML
+            fnPresentarDetalleFacturas()
         })
 
-        function fnPresentarDetalleFacturas(){
+        // Función para verificar si un producto ya existe en el detalle de la factura
+        function fnExisteProductoEnDetalle(codigo){
+            // Recorremos el arreglo de detalles de la factura
+            for(let i in facturaDetalles){
+                // Comparamos el código del producto
+                if(facturaDetalles[i][0] == codigo){
+                    // Retornamos verdadero y el índice del producto encontrado
+                    return [true, i]
+                }
+            }
+            // Si no se encuentra el producto, retornamos falso y -1
+            return [false, -1]
+        }
 
+        function fnPresentarDetalleFacturas(){
+            // Inicializamos el subtotal en cero y limpiamos los totales en la presentación HTML
+            let subtotal = 0
+            txtSubtotal.textContent = `$0.00`
+            txtIva.textContent = `$0.00`
+            txtTotalPagar.textContent = `$0.00`
+
+            // Validamos si el detalle de la factura está vacío
+            if(facturaDetalles.length == 0){
+                tablaDetalle.innerHTML = `<tr>
+                    <td colspan="6" style="text-align-last: center;">No hay productos en la factura</td>
+                </tr>`
+                return
+            }
+            // Si hay productos en el detalle de la factura
+            // Limpiamos el contenido de la tabla de detalle
             tablaDetalle.innerHTML = ''
 
             for(let i in facturaDetalles){
+                // Creamos el elemento fila <tr>
                 const fila = document.createElement('tr')
-
+                // Recorremos cada columna del detalle de la factura, fila por fila
                 for(let j in facturaDetalles[i]){
+                    // Creamos el elemento columna <td>
                     const columna = document.createElement('td')
                     columna.textContent = facturaDetalles[i][j]
+                    // Agregamos la columna a la fila
                     fila.appendChild(columna)
                 }
+                // creamos la columna de acción (botón eliminar) <td>
                 const celdaAccion = document.createElement('td')
+                // Creamos el botón eliminar <button>
                 const btnEliminar = document.createElement('button')
                 btnEliminar.className = 'btn-remove'
                 btnEliminar.textContent = 'x'
-                fila.appendChild(btnEliminar)
+                btnEliminar.dataset.indice = i // asignamos el índice del producto al boton eliminar
+                // Agregamos el boton eliminar a la celda de acción
+                celdaAccion.appendChild(btnEliminar)
+                // Agregamos la celda de acción a la fila
+                fila.appendChild(celdaAccion)
 
+                // Agregamos la fila a la tabla de detalle
                 tablaDetalle.appendChild(fila)
+                // Acumulamos el subtotal
+                subtotal += facturaDetalles[i][4]
             }
+
+            // Actualizamos los totales en la presentación HTML
+            txtSubtotal.textContent = `$${subtotal.toFixed(2)}`
+            // Calculamos el IVA (15%)
+            const iva = subtotal * 0.15
+            txtIva.textContent = `$${iva.toFixed(2)}`
+            // Calculamos el total a pagar
+            const total = subtotal + iva
+            txtTotalPagar.textContent = `$${total.toFixed(2)}`
         }
+
+        // Evento para eliminar un producto del detalle de la factura
+        tablaDetalle.addEventListener('click', (event)=>{
+            // Validamos si el elemento clickeado es un botón eliminar
+            if(event.target.classList.contains('btn-remove')){
+                // Extraemos el índice del producto a eliminar desde el atributo data-indice del botón eliminar
+                const indice = event.target.dataset.indice
+                // Eliminamos el producto del arreglo de detalles de la factura
+                facturaDetalles.splice(indice, 1)
+                // presentamos el detalle actualizado en la tabla HTML
+                fnPresentarDetalleFacturas()
+            }
+        })
 
         function fnCargarProductos(){
             for(let i in productos){
