se agrega nuevos productos

--- a/caso-estudio-factura.html
+++ b/caso-estudio-factura.html
@@ -440,13 +440,28 @@
         // Vector listado de productos.
         // productos [ [producto1], [producto2], [producto3], ..N ]
         const productos = [
-           //cod  , precio , descripcion
-           //[0]    [1]   [2]
-           ["0001", 3500, "Sistema Web Personalizado"],
-           ["0002", 500, "Computador Core I7"],
-           ["0003", 200, "Monitor LG 20 pulgadas"],
-           ["0004", 300, "Telefono Celular Samsung"],
-           ["0005", 200, "Camara profesional Web."]
+            //cod  , precio , descripcion
+            //[0]    [1]   [2]
+            ["0001", 3500, "Sistema Web Personalizado"],
+            ["0002", 500, "Computador Core I7"],
+            ["0003", 200, "Monitor LG 20 pulgadas"],
+            ["0004", 300, "Telefono Celular Samsung"],
+            ["0005", 200, "Camara profesional Web."],
+            ["0006", 150, "Servicio de Mantenimiento Anual"],
+            ["0007", 100, "Servicio de Hosting Web (1 año)"],
+            ["0008", 250, "Licencia Software Antivirus (1 año)"],
+            ["0009", 400, "Impresora Multifuncional HP"],
+            ["0010", 120, "Router Inalámbrico TP-Link"],
+            ["0011", 180, "Teclado Mecánico RGB"],
+            ["0012", 90, "Mouse Óptico USB"],
+            ["0013", 75, "Audífonos con Micrófono"],
+            ["0014", 60, "Disco Duro Externo 1TB"],
+            ["0015", 45, "Memoria USB 64GB"],
+            ["0016", 250, "Tablet Android 10 pulgadas"],
+            ["0017", 300, "Smartwatch Deportivo"],
+            ["0018", 400, "Proyector Multimedia HD"],
+            ["0019", 150, "Cámara de Seguridad IP"],
+            ["0020", 80, "Soporte para Laptop Ajustable"]
         ]
         // Vector para guardar los detalles de la factura
         const facturaDetalles =[]
